[package]
name = "encrypted_id"
version = "0.1.4"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
description = "Encryption and Decryption"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"
keywords = ["encryption", "decryption", "encrypted_id", "decrypted_id"]
repository = "https://github.com/AbrarNitk/diesel_mate"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "~1.3.0"
base64 = "~0.10.1"
byteorder = "~1.3.2"
crc = "^1.8.1"
rust-crypto = "0.2.36"
failure = "0.1.5"